--- a/templates/goals/goals_list.html
+++ b/templates/goals/goals_list.html
@@ -5,6 +5,7 @@
 {% block content %}
 <h2>My Goals</h2>
 <a href="{% url 'goal_create' %}">Create New Goal</a>
+
 <div class="table-container">
     <table class="table">
         <thead>
@@ -23,7 +24,7 @@
                 <td>KES {{ goal.target_amount }}</td>
                 <td>
                     <a href="{% url 'goal_edit' goal.id %}">Edit</a> |
-                    <a href="{% url 'goal_delete' goal.id %}">Delete</a>
+                    <a href="{% url 'goal_delete' goal.id %}" onclick="return confirm('Are you sure you want to delete this goal?');">Delete</a>
                 </td>
             </tr>
             {% endfor %}
